--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h2>Added the new line by Naveen Muniswamy</h2>
 <h3>This is the three way merge</h3>
 <h4>add</h4>
+<h5>Naveen added new content</h5>
